fai (3.2.14) unstable; urgency=low

  * fai-guide.sgml: document behaviour of LOGSERVER (closes: #361524)
  * install_packages: fix usage of option -n (closes: #489546)

 -- Thomas Lange <lange@debian.org>  Mon, 27 Oct 2008 21:19:12 +0100

fai (3.2.13) unstable; urgency=low

  * lib/setup-storage/Commands.pm: fixed dependency error in vgcreate
    commands (closes: #502462)
  * fcopy: fix ordering of classes (closes: #502975)

 -- Thomas Lange <lange@debian.org>  Wed, 22 Oct 2008 12:14:51 +0200

fai (3.2.12) unstable; urgency=low

  * setup-storage/Parser.pm, setup-storage/Sizes.pm: Warn, if a
    preserved partition does not match the size specified in the
    disk_config; fail, if an extended partition is to be created in place
    of a to-be-preserved partition (closes: #501772)
  * setup-storage/Exec.pm: recent versions of parted log errors to
    stdout instead of stderr + adaption of error messages to current ones
    (closes: #500823)
  * setup-storage/Volumes.pm: Handle new error message in case of
    missing disk label (closes: #500823)
  * setup-storage: extended debug output of sorted commands
    (closes: #500822)
  * setup-storage/Commands.pm: Properly sort commands, fixed dependency
    errors, use start_byte for new config instead of begin_byte
    (closes: #500822)
  * setup-storage: increase version number
  * make-fai-nfsroot: print version of debootstrap (closes: #500046)
  * fai-guide.sgml: minor update in example
  * fai-chboot.8: fix warning from man

 -- Thomas Lange <lange@debian.org>  Wed, 15 Oct 2008 11:25:39 +0200

fai (3.2.11) unstable; urgency=low

  * control: depend on syslinux-common instead of syslinux (closes: #494417)
    use same intro for description for all packages,
    add dependeny and recommends on openbsd-inetd | inet-superserver as
    workaround for #404760
  * fai-chboot.8, fai-cd.8, ainsl.1, fai.8, fai-class.8: apply patches
    from Colin Tuckley
  * THANKS: add Colin