@@ -2,8 +2,11 @@ fai (3.2.14) unstable; urgency=low
 
   * fai-guide.sgml: document behaviour of LOGSERVER (closes: #361524)
   * install_packages: fix usage of option -n (closes: #489546)
+  * setup-storage, Commands.pm, Exec.pm: Call udevsettle before doing any
+    of the commands to avoid all the possible pitfalls, simplyfies the
+    code quite a bit. (closes: #503729)
 
- -- Thomas Lange <lange@debian.org>  Mon, 27 Oct 2008 21:19:12 +0100
+ -- Thomas Lange <lange@debian.org>  Tue, 28 Oct 2008 10:32:20 +0100
 
 fai (3.2.13) unstable; urgency=low
 
